fix fs on mobile and nav on desktop

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -124,10 +124,10 @@ ul {
 
 
 .info-container-mobile{ width: 80%;
-  margin-top: 20px;  font-size: 15.5px;
-  .header-a{color: black; font-size: 22px; margin-bottom: 0px;}
+  margin-top: 20px;  font-size: 15px;
+  .header-a{color: black; font-size: 18px; margin-bottom: 0px;}
   p{ margin: 10px 0px;   a{ color: $new-project}
 }
-.contact{margin-top: 25px;}
+.contact{margin-top: 30px;}
 
 }
